tests/toy/neg/001093_mutation.toylang
program a = { if a then sleep while sleep; } .
